JobAgent sendProcInfo, set node, started and spyurl. changeStatus update. Run.sh with prod parameters